--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		Hello world
+		<canvas id="game" width="400" height="400"></canvas>
 	</body>
 </html>
